# vicut

./: .gitignore  ADVANCED.md  Cargo.toml  EXAMPLES.md  LICENSE.md  README.md
.github/workflows/: release.yaml
src/: exec.rs  func.txt  keys.rs  linebuf.rs  main.rs  reader.rs  register.rs  vicmd.rs  vimode.rs
src/modes/: ex.rs  insert.rs  mod.rs  normal.rs  replace.rs  search.rs  visual.rs
src/modes/ex/: mod.rs
src/tests/: editor.rs  files.rs  linebuf.rs  mod.rs  modes.rs  pattern_match.rs  wiki_examples.rs
src/tests/golden_files/: vicut_main.rs  vicut_main_all_comments.rs  vicut_main_argv_replaced.rs  vicut_main_extracted_impl.rs
src/tests/modes/: ex.rs  insert.rs  mod.rs  normal.rs  visual.rs
src/tests/modes/snapshots/: vicut__tests__modes__insert__vimode_insert_structures.snap  vicut__tests__modes__normal__vimode_normal_structures.snap
src/tests/snapshots/: vicut__tests__modes__vimode_insert_cmds.snap  vicut__tests__modes__vimode_normal_cmds.snap
src/vic/: mod.rs  vic.pest
