[package]
name = "vicut"
version = "0.3.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/km-clay/vicut"
description = "A CLI text processor that uses Vim commands to transform text and extract fields"
keywords = ["cli", "vim", "fields", "text", "slice"]
categories = ["command-line-utilities", "text-editors", "text-processing", "value-formatting"]

[dependencies]
bitflags = "2.9.1"
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.27"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.5.4"

[dev-dependencies]
insta = "1.42.2"
pretty_assertions = "1.4.1"
